...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPE-o2-rcb" userLabel="ContentContainer">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <subviews>
                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ae3-9C-S9w">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OnlineStore" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNx-NI-ONQ">
                                                <rect key="frame" x="69.5" y="56" width="236" height="82"/>
                                                <fontDescription key="fontDescription" name="PartyLetPlain" family="Party LET" pointSize="70"/>
                                                <color key="textColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cj3-HH-qpf">
...
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ypr-jk-rlm">
                                                <rect key="frame" x="170" y="325" width="35" height="39"/>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="22"/>
                                                <state key="normal" title="GO">
                                                    <color key="titleColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="authorization:" destination="YOi-KU-kCm" eventType="touchUpInside" id="FVZ-fG-ikr"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HrT-nu-dvq">
                                                <rect key="frame" x="124.5" y="404" width="126" height="36"/>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                                <state key="normal" title="Registration">
                                                    <color key="titleColor" red="0.63529411764705879" green="0.4823529411764706" blue="0.29411764705882354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="registration:" destination="YOi-KU-kCm" eventType="touchUpInside" id="obH-ZI-O0V"/>
                                                </connections>
                                            </button>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AAg-Bd-DtH">
                                        <rect key="frame" x="133" y="126" width="109" height="33"/>
                                        <color key="backgroundColor" red="0.90759711831071255" green="0.93810343349040459" blue="0.21816547704557945" alpha="0.2323951198630137" colorSpace="custom" customColorSpace="displayP3"/>
                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="17"/>
                                        <state key="normal" title="List of goods">
                                            <color key="titleColor" red="0.63529411759999999" green="0.4823529412" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="listOfGoods:" destination="BkS-t5-egL" eventType="touchUpInside" id="eie-y9-yWQ"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RrO-u9-IAi">
                                        <rect key="frame" x="158" y="199" width="59" height="33"/>
                                        <color key="backgroundColor" red="0.90759711830000001" green="0.93810343350000003" blue="0.218165477" alpha="0.2323951199" colorSpace="custom" customColorSpace="displayP3"/>
                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="17"/>
                                        <state key="normal" title="Basket">
                                            <color key="titleColor" red="0.63529411759999999" green="0.4823529412" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="goToBasket:" destination="BkS-t5-egL" eventType="touchUpInside" id="hzb-ja-3tL"/>
                                        </connections>
                                    </button>
...
